erro.txt~
In file included from brooks.c:2:
brooks.h:13:1: warning: no semicolon at end of struct or union
   13 | } Livro;
      | ^
brooks.h:29:30: error: unknown type name ‘Filias’; did you mean ‘Filiais’?
 f  29 | Filiais *removerLojia(int id, Filias *f);
      |                              ^~~~~~
      |                              Filiais
brooks.h:39:28: error: unknown type name ‘Filais’; did you mean ‘Filiais’?
 f  39 | int   buscaFiliais(int id, Filais *f);
      |                            ^~~~~~
      |                            Filiais
brooks.h:42:18: error: unknown type name ‘Filias’; did you mean ‘Filiais’?
f   42 | int   buscaLivro(Filias *f, char isbn, char autor,char titulo);
      |                  ^~~~~~
      |                  Filiais
brooks.h:2: error: unterminated #ifndef
    2 | #ifndef brooks_H
      | 
brooks.c:4:1: error: unknown type name ‘Livraria’
    4 | Livraria *criaFilal();
      | ^~~~~~~~
brooks.c:4:11: error: conflicting types for ‘criaFilal’; have ‘int *()’
    4 | Livraria *criaFilal();
      |           ^~~~~~~~~
brooks.h:27:10: note: previous declaration of ‘criaFilal’ with type ‘Filiais *()’
   27 | Filiais *criaFilal();
      |          ^~~~~~~~~
brooks.c:5:1: error: unknown type name ‘Livraria’
    5 | Livraria *cadNovaLoja(int id, char titulo, char gere);
      | ^~~~~~~~
brooks.c:5:11: error: conflicting types for ‘cadNovaLoja’; have ‘int *(int,  char,  char)’
    5 | Livraria *cadNovaLoja(int id, char titulo, char gere);
      |           ^~~~~~~~~~~
brooks.h:28:10: note: previous declaration of ‘cadNovaLoja’ with type ‘Filiais *(int,  char,  char)’
   28 | Filiais *cadNovaLoja(int id, char titulo, char gere);
      |          ^~~~~~~~~~~
brooks.c:6:1: error: unknown type name ‘Livraria’
    6 | Livraria *removerLoja(int id, Filiais *f);
      | ^~~~~~~~
brooks.c:10:1: error: unknown type name ‘Livros’; did you mean ‘Livro’?
   10 | Livros *criaAcervo()
      | ^~~~~~
      | Livro
brooks.c:10:9: error: conflicting types for ‘criaAcervo’; have ‘int *()’
   10 | Livros *criaAcervo()
      |         ^~~~~~~~~~
brooks.h:33:8: note: previous declaration of ‘criaAcervo’ with type ‘Livro *()’
   33 | Livro *criaAcervo();
      |        ^~~~~~~~~~
brooks.c:13:2: error: expected identifier or ‘(’ before ‘.’ token
   13 | }.local/state/nvim/swap//%home%beellzzebuth%Documentos%Projects C%Trabalho da Luciana%Livraria-Arv.Binaria%brooks.h.swp"
      |  ^
brooks.c:21:5: error: unknown type name ‘Livros’; did you mean ‘Livro’?
   21 |     Livros *removeLivros(Filiais *f,int id, char isbn);
      |     ^~~~~~
      |     Livro
brooks.c:22:5: error: expected identifier or ‘(’ before ‘{’ token
   22 |     {
      |     ^
brooks.c:28:5: error: expected identifier or ‘(’ before ‘{’ token
   28 |     {
      |     ^
brooks.c:40:1: error: expected identifier or ‘(’ before ‘{’ token
   40 | {
      | ^
brooks.c:46:1: error: expected identifier or ‘(’ before ‘{’ token
   46 | {
      | ^
